[detectionpipeline] PlanNodeFactory. Expose API to register classes at runtime.